# AI4Green

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  environment.yaml  kafka-compose.yml  pyproject.toml  readme.md  requirements.in  requirements.txt  startup.sh
.azure/bicep/: bicepconfig.json  container-env.bicep  kafka.bicep  main.bicep  main.bicepparam  minio.bicep  vnet.bicep
.github/: labeler.yml  pull_request_template.md
.github/workflows/: audit-log-deploy.yml  deploy-audit-log-compressor.yml  deploy-audit-log-deleter.yml  deploy-audit-log-saver.yml  deploy.yml  make-kc-connectors.yml  pr.check.work-item-ref.yml  publish-ai4green-kafka-connect.yml  publish-ai4green-minio.yml  publish-webapp.yml  push-audit-log-compressor.yml  push-audit-log-deleter.yml  push-audit-log-saver.yml  push-to-devops.yml  test.yml  update-remote.yml
Webapp/: app.py  client_secrets.json  config.py  configs.yaml  decorators.py  seed_data.yaml  utilities.py
Webapp/compound_database/: Compound_database_extraction.py  auxiliary.py  elements_sustainability.csv  hazard_codes.db  pubchem_download.py  save_cas_to_solvent_csv.py  solvents.csv
Webapp/migrations/: 089a7b23873c_data_export_request.py  README  README.md  env.py  script.py.mako  utils.py
Webapp/migrations/versions/: 05edee84f6ca_reaction_approval.py  0bc125b57d9e_controlled_substances.py  0f337bbb7a57_controlled_substances.py  0ffaff5977e3_reaction_approval.py  1702a83a51d7_add_event_time_type_message.py  21cc6dce39da_subscription_tiers.py  23a8160c3471_email_verification.py  2e5d2071ac0b_controlled_substances.py  330d1016bf41_add_1_5_updates.py  3b019dc851b1_reaction_sets.py  3d93156fb602_data_export_request.py  42496dce53f6_data_export_request.py  436a03e01053_autogenerated_pdf_summary.py  43a86ed23105_reaction_sets.py  488aa917bf8c_init_audit_log.py  488c7f1e9739_data_export_request.py  4bb67488505a_reaction_approval.py  56de6fb3d672_checksums.py  57cdfc52c9ed_data_export_request.py  583f3c4423e8_privacy_policy.py  593edf90705f_data_export_request.py  5f8506546718_data_export_reactions.py  63e25b54c2cb_controlled_substances.py  65ddcc350a21_solvent_surfer.py  6e8cc8d07e0e_controlled_substances.py  70fd97efd6c4_rxn_and_recent_reagents.py  711d8fcaab4c_index_audit_log_time.py  731f946e150f_reaction_approval.py  73dc22cc07e2_reaction_sets.py  7705cc9f79e5_polymer.py  7ab1dd7a7d08_privacy_policy.py  7bd0431169c1_controlled_substances.py  930390a78c50_reaction_sets.py  987ee99b7493_polymer.py  99d2e31970e9_reaction_sets.py  a1c950d31d0e_retrosynthesis.py  a32e93c15375_controlled_substances.py  a84dc8a36c6d_init_audit_log_db.py  aa00fe273863_retrosynthesis_access_keys.py  ae1a2abe0374_.py  (+13 more)
Webapp/sources/: __init__.py  app_enums.py  auxiliary.py  config.py  decorators.py  email_methods.py  extensions.py  models.py  reagents.db
Webapp/sources/admin_dashboard/: __init__.py  routes.py
Webapp/sources/auth/: __init__.py  forms.py  routes.py  utils.py
Webapp/sources/commands/: commands.py
Webapp/sources/compound_data_error_report/: __init__.py  routes.py
Webapp/sources/create_workbook/: __init__.py  routes.py
Webapp/sources/create_workgroup/: __init__.py  routes.py
Webapp/sources/delete_profile/: __init__.py  routes.py
Webapp/sources/dto/: PersonSchema.py  ReactionNoteSchema.py  ReactionSchema.py  UserSchema.py  __init__.py
Webapp/sources/email_sender/: email_sender.py
Webapp/sources/export_data/: __init__.py  routes.py
Webapp/sources/join_workgroup/: __init__.py  forms.py  routes.py
Webapp/sources/main/: __init__.py  routes.py
Webapp/sources/manage_workbook/: __init__.py  routes.py
Webapp/sources/manage_workgroup/: __init__.py  routes.py
Webapp/sources/models/: PCA_graph.py  __init__.py  audit_log.py  audit_logs.py  base.py  compound.py  compound_data_error_report.py  controlled_substances.py  data_access_changes.py  data_access_history.py  data_export_request.py  element.py  export_control.py  export_requests.py  hazard_code.py  institution.py  news_item.py  notification.py  novel_compound.py  person.py  polymer_novel_compound.py  polymer_repeat_unit.py  reaction.py  reaction_approval_request.py  reaction_data_file.py  reaction_editing_history.py  reaction_note.py  reaction_sets.py  retrosynthesis.py  retrosynthesis_access_keys.py  role.py  solvent.py  update_compound.py  user.py  wb_status_request.py  wg_status_request.py  (+3 more)
Webapp/tests/: conftest.py  populate_database.py  utils.py
Webapp/workers/: kafka_worker.py
docs/: deployment.md
kafka-connect-configs/: example.json
microservices/: kafka-connect-setup.sh  kafka-connect.dockerfile  minio-setup.sh  minio.dockerfile
microservices/kc_connector/: README.md  pyproject.toml
microservices/kc_connector/src/kc_connector/: __main__.py  template.json
workers/: Dockerfile  pyproject.toml
workers/audit_log_compressor/: Dockerfile  audit_log_compressor.py  config.py  dto.py  kafka_worker.py  pyproject.toml  reaction_edit_history_processor.py
workers/audit_log_compressor/message_queue/: consumers.py  dto.py  producers.py  serde.py
workers/audit_log_deleter/: Dockerfile  audit_log_deleter.py  pyproject.toml
workers/audit_log_saver/: Dockerfile  audit_log_saver.py  models.py  pyproject.toml
(+539 files in other folders)
