[project]
name = "kc-connector"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Lea",email = "Daniel.Lea@nottingham.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "kc_connector", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
