[tool.poetry]
name = "audit-log-compressor"
version = "0.1.0"
description = ""
authors = ["maddy <madeleine.parker@nottingham.ac.uk>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.11.0"
python-dotenv = "^1.1.0"
azure-storage-queue = "12.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
